Merge main@94099d18f5 unto verkle@efb55c1f54 (#7726)
Signed-off-by: Luis Pinto <luis.pinto@consensys.net>
Co-authored-by: Karim Taam <karim.t2am@gmail.com>